# front_web

./: Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup_vm.sh
.github/workflows/: docker-publish.yml
src/: main.py
